# mangabot-rs

./: .gitignore  Cargo.toml  clippy.toml  config_template.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/: cate.rs  copy.rs  info.rs  menu.rs  mod.rs  preview.rs  rank.rs  search.rs  start.rs  zip.rs
src/models/: mod.rs
src/services/: manga.rs  mod.rs  web.rs
src/utils/: cache.rs  client.rs  codec.rs  dom.rs  fs.rs  http.rs  mod.rs  zip.rs
tests/: e2e_zip.rs  sanitize.rs  web_download.rs
